plugins {
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.1.0' //Plugin que ayuda a construir proyectos JAVAFX
}

repositories {
	mavenCentral()
}

javafx {
    version = "25"
    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml']
}

dependencies {
  implementation("com.mysql:mysql-connector-j:9.5.0")
}

java { //Se indica la versión de JDK que ha de utilizar
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

application { //Definimos clase principal del proyecto
    mainClass = 'proyectoDesarrollo.PlantillaFX'
    applicationDefaultJvmArgs = ["--enable-native-access=javafx.graphics"]
}

sourceSets {
  main {
    resources {
        srcDirs = ["src/main/resources"]
        includes = ["**/*.fxml", "**/*.png", "**/*.jpg", "**/*.jpeg", "**/*.gif"]
    }
  }
}

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}




